# channel-messages-api

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
core/: asgi.py  models.py  pagination.py  routing.py  settings.py  urls.py
core/permissions/: base.py  channel.py
core/settings/: __init__.py  base.py  dev.py
core/viewsets/: mixins.py
messenger/: admin.py  api.py  consumers.py  models.py  operations.py  queries.py  routing.py  serializers.py  urls.py
messenger/migrations/: 0001_initial.py  0002_alter_channel_managers_alter_channelmessage_managers_and_more.py  0003_remove_channel_is_active_and_more.py  0004_alter_channelmessage_sender_channel_owner_and_more.py  0005_alter_channelmember_channel.py  0006_channel_invite_code_alter_channelmember_member.py  0007_alter_channelmember_unique_together.py
tests/: conftest.py
tests/factories/: __init__.py
tests/factories/messenger/: channel.py  channel_member.py  channel_message.py
tests/factories/users/: user.py
tests/functional/: conftest.py
tests/functional/messenger/: test_channels_api.py  test_messages_api.py  test_user_channels_api.py  test_websocket_connection.py
tests/functional/users/: test_auth_api.py  test_auth_register_api.py
tests/integration/messenger/models/: test_generate_invite_code.py  test_invite_code_exists.py
tests/integration/messenger/queries/: test_get_all_channel_messages.py  test_get_all_channels_for_user.py  test_get_channel_by_code.py  test_get_channel_by_id.py  test_is_channel_member.py
tests/unit/messenger/: test_serializers.py
users/: managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_username.py  0003_remove_user_is_active.py  0004_alter_user_email.py
