[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Queenie Grace Isidro <queeniegraceisidro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
