[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Queenie Grace Isidro <queeniegraceisidro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"

[tool.poetry.group.test.dependencies]
pytest-django = "^4.7.0"
factory-boy = "^3.3.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
